<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_harian">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shadow"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/txtPenerimaanHarian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/custom_shape"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:elevation="4dp"
                    android:paddingTop="20dp"
                    android:text="@string/penerimaan_harian"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack" />

                <LinearLayout
                    android:id="@+id/perodeHarian"
                    android:layout_below="@+id/txtPenerimaanHarian"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:background="@drawable/custom_shape_biru_awan"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="2dp"
                        android:text="@string/periode_pembayaran"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtPeriodeHarian"
                        android:gravity="left"
                        android:ellipsize="end"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:text="-"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/totalLembar"
                    android:layout_below="@id/perodeHarian"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:background="@drawable/custom_shape_biru_awan">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/total_lembar"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTotalLembar"
                        android:gravity="left"
                        android:ellipsize="end"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/totalBiayaAir"
                    android:layout_below="@id/totalLembar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:background="@drawable/custom_shape_jingga">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/total_biaya_air"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTotalBiayaAir"
                        android:gravity="left"
                        android:ellipsize="end"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/totalDenda"
                    android:layout_below="@+id/totalBiayaAir"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:background="@drawable/custom_shape_biru_amba">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/total_denda"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTotalDenda"
                        android:gravity="left"
                        android:ellipsize="end"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_below="@+id/totalDenda"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical"
                    android:background="@drawable/custom_shape_biru_awan">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/total_matrai"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtTotalMatrai"
                        android:gravity="left"
                        android:ellipsize="end"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>