<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_wilayah">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/shadow"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/txtWilayah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp"
                    android:elevation="4dp"
                    android:text="@string/penerimaan_wilayah"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack" />

                <LinearLayout
                    android:id="@+id/periodeWilayah"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/txtWilayah"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_shape_biru_awan"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/periode_pembayaran"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/txtPeriodeWilayah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="-"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lembarRekWil"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/periodeWilayah"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shape_jingga"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/lembar_rekening"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/txtLembarRekeningWilayah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nominalRekWil"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/lembarRekWil"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shape_biru_amba"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingBottom="2dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/nominal_rekenig"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/txtNominalRekeningWilayah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lembarRekSDWil"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nominalRekWil"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_shape_ungu_amba"
                    android:gravity="center"
                    android:elevation="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="Lembar Rekening dan Tunggakan"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/txtLembarRekeningTunggakan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rekAirSDWil"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lembarRekSDWil"
                    android:layout_marginTop="10dp"
                    android:elevation="4dp"
                    android:background="@drawable/custom_shape_biru_awan"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/rekening_air_s_d_hari_ini"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/txtRekeningAirHariIniwlyh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rekAirSDWil"
                    android:layout_marginTop="10dp"
                    android:elevation="4dp"
                    android:background="@drawable/custom_shape_biru_amba"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/persentase"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/txtPersentaseWilayah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="left"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="0"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>